# rooster

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  INFORMATION_ARCHITECTURE.md  Justfile  PLAN.md  PRD.md  PRODUCTION_BUGS.md  README.md  SIMPLIFICATION_CHANGES.md  agent-todo.md  bugs.txt  docker-compose.prod.yaml  docker-compose.tunnel.yaml  docker-compose.yaml  known_issues.txt  phase_2_plan.md  shell.nix  verify-swap-expiration.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 135a6e0101bd_add_push_subscriptions.py  20260129_143513_add_swap_request_model.py  4b2c1d7a9f3e_add_reference_id_and_team_joined_notification.py  a1b2c3d4e5f6_add_permissions_to_team_members.py  a3b7c9d1e5f2_add_monthly_nth_weekday.py  b2b9dd157299_initial_migration_with_all_models.py  b5d3e7f9a2c4_add_unique_constraint_event_assignments.py  c9f4a2b8d1e7_add_notification_types.py  d4e5f6a7b8c9_add_org_is_personal.py  d79c335d1532_initial_migration_with_all_models.py
backend/app/: main.py
backend/app/api/: auth.py  availability.py  dashboard.py  deps.py  push.py  (+5 more)
backend/docs/: ROTATION_ALGORITHM_EVALUATION.md
backend/scripts/: expire_swap_requests.py
backend/tests/: conftest.py  test_auth.py  test_e2e_swap_workflow.py  test_email.py  test_invites.py  test_organisations.py  test_permissions.py  test_push.py  test_roster_service.py  test_rosters.py  test_suggestions.py  test_swap_expiration_integration.py  test_swap_requests.py  test_teams.py
(+153 files in other folders)
